Footer spacing fix

--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ body {
 }
 
 #wrapper1 {
-  padding: 100px 200px;
+  padding: 100px 200px 150px 200px;
 }
 
 #footer {
